--- a/PA1_template.html
+++ b/PA1_template.html
@@ -57,7 +57,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 <div id="loading-and-preprocessing-the-data" class="section level3">
 <h3>Loading and preprocessing the data</h3>
-<p>I assume that the file <code>activity.cgesv</code> is placed in the same folder as this file (<code>PA1_template.Rmd</code>).</p>
+<p>I assume that the file <code>activity.csv</code> is placed in the same folder as this file (<code>PA1_template.Rmd</code>).</p>
 <pre class="r"><code>data &lt;- read.csv(&quot;activity.csv&quot;)
 data$date &lt;- as.Date(data$date , format = &quot;%Y-%m-%d&quot;)</code></pre>
 </div>
